--- a/CoolWebApi/CoolWebApi/appsettings.json
+++ b/CoolWebApi/CoolWebApi/appsettings.json
@@ -10,7 +10,7 @@
     "RolesCollectionName": "Roles",
     "RoleClaimsCollectionName": "RoleClaims",
     "UserClaimsCollectionName": "UserClaims",
-    "ConnectionString": "mongodb+srv://kevinkashinghui:XjC627468669@cluster0.gocdz53.mongodb.net/my_blazor_app?retryWrites=true&w=majority&appName=AtlasApp",
+    "ConnectionString": "Add Your MongoDB Connection String",
     "DatabaseName": "my_blazor_app"
   },
   "AppConfiguration": {
@@ -26,12 +26,12 @@
     "Audience": "WebAppAudience"
   },
   "MailConfiguration": {
-    "From": "info@codewithmukesh.com",
-    "Host": "smtp.ethereal.email",
+    "From": "Email Address",
+    "Host": "Host Information",
     "Port": 587,
-    "UserName": "adaline.pfannerstill49@ethereal.email",
-    "Password": "vAKmWQB8CyPUBg8rBQ",
-    "DisplayName": "Mukesh Murugan"
+    "UserName": "Test User Name",
+    "Password": "SMTP PWD",
+    "DisplayName": "Test"
   }
 }
 
