--- a/CoolWebApi/CoolWebApi/appsettings.Development.json
+++ b/CoolWebApi/CoolWebApi/appsettings.Development.json
@@ -10,7 +10,7 @@
     "RolesCollectionName": "Roles",
     "RoleClaimsCollectionName": "RoleClaims",
     "UserClaimsCollectionName": "UserClaims",
-    "ConnectionString": "Add Your MongoDB Connection String",
+    "ConnectionString": "mongodb+srv://kevinkashinghui:XjC627468669@cluster0.gocdz53.mongodb.net/my_blazor_app?retryWrites=true&w=majority&appName=AtlasApp",
     "DatabaseName": "cool_blazor_app"
   },
   "AppConfiguration": {
