--- a/CoolWebApi/CoolWebApi/appsettings.json
+++ b/CoolWebApi/CoolWebApi/appsettings.json
@@ -10,8 +10,8 @@
     "RolesCollectionName": "Roles",
     "RoleClaimsCollectionName": "RoleClaims",
     "UserClaimsCollectionName": "UserClaims",
-    "ConnectionString": "Add Your MongoDB Connection String",
-    "DatabaseName": "my_blazor_app"
+    "ConnectionString": "mongodb+srv://kevinkashinghui:XjC627468669@cluster0.gocdz53.mongodb.net/my_blazor_app?retryWrites=true&w=majority&appName=AtlasApp",
+    "DatabaseName": "cool_blazor_app"
   },
   "AppConfiguration": {
     "Secret": "S0M3RAN0MS3CR3T!1!MAG1C!1!123456789",
