--- a/CoolWebApi/CoolWebApi/appsettings.json
+++ b/CoolWebApi/CoolWebApi/appsettings.json
@@ -11,7 +11,7 @@
     "RoleClaimsCollectionName": "RoleClaims",
     "UserClaimsCollectionName": "UserClaims",
     "ConnectionString": "Fill it with your mongodb connection string.",
-    "DatabaseName": "my_blazor_app"
+    "DatabaseName": "cool_blazor_app"
   },
   "AppConfiguration": {
     "Secret": "S0M3RAN0MS3CR3T!1!MAG1C!1!123456789",
