--- a/CoolWebApi/CoolWebApi/appsettings.json
+++ b/CoolWebApi/CoolWebApi/appsettings.json
@@ -10,7 +10,7 @@
     "RolesCollectionName": "Roles",
     "RoleClaimsCollectionName": "RoleClaims",
     "UserClaimsCollectionName": "UserClaims",
-    "ConnectionString": "Fill it with your mongodb connection string",
+    "ConnectionString": "Fill it with your mongodb connection string.",
     "DatabaseName": "cool_blazor_app"
   },
   "AppConfiguration": {
