--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 mono_crash.*
 
 # appsetting
-CoolWebApi/CoolWebApi/appsettings.json
+appsettings.json
 appsettings.Production.json
 appsettings.Development.json
 
