Add S3 storage support

--- a/CoolWebApi/CoolWebApi/appsettings.json
+++ b/CoolWebApi/CoolWebApi/appsettings.json
@@ -24,5 +24,9 @@
     "SecretKey": "test@test.com",
     "Issuer": "WebAppIssuer",
     "Audience": "WebAppAudience"
+  },
+  "AWS": {
+    "Profile": "default",
+    "Region": "us-east-2"
   }
 }
