--- a/CoolWebApi/CoolWebApi/CoolWebApi.csproj
+++ b/CoolWebApi/CoolWebApi/CoolWebApi.csproj
@@ -1,16 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
-  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' "/>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' "/>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     <PackageReference Include="MediatR" Version="12.2.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     <PackageReference Include="AspNetCore.Identity.Mongo" Version="8.3.3"/>
@@ -31,6 +29,7 @@
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.11"/>
     <PackageReference Include="EPPlus" Version="7.0.10"/>
     <PackageReference Include="MongoDB.EntityFrameworkCore" Version="7.0.0-preview.1"/>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.309.6"/>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301"/>
   </ItemGroup>
-
 </Project>
