Add AWS S3 support

--- a/CoolWebApi/CoolWebApi/appsettings.json
+++ b/CoolWebApi/CoolWebApi/appsettings.json
@@ -26,7 +26,7 @@
     "Audience": "WebAppAudience"
   },
   "AWS": {
-    "Profile": "default",
-    "Region": "us-east-2"
+    "Profile": "coolblazor-profile",
+    "Region": "ap-southeast-1"
   }
 }
