AWS S3 services building...

--- a/CoolWebApi/CoolWebApi/appsettings.json
+++ b/CoolWebApi/CoolWebApi/appsettings.json
@@ -26,7 +26,7 @@
     "Audience": "WebAppAudience"
   },
   "AWS": {
-    "Profile": "coolblazor-profile",
+    "Profile": "coolblazor-cli",
     "Region": "ap-southeast-1"
   }
 }
