Frontend save image and upload to s3...

--- a/CoolBlazor/CoolBlazor/Properties/launchSettings.json
+++ b/CoolBlazor/CoolBlazor/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "http": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "home",
       "applicationUrl": "http://localhost:5158",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
