--- a/CoolBlazor/CoolBlazor/CoolBlazor.csproj
+++ b/CoolBlazor/CoolBlazor/CoolBlazor.csproj
@@ -21,5 +21,7 @@
     <PackageReference Include="System.Reactive" Version="6.0.0"/>
     <PackageReference Include="ReactiveUI.Blazor" Version="19.5.1"/>
     <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.20"/>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.310.1"/>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301"/>
   </ItemGroup>
 </Project>
