--- a/CoolBlazor/CoolBlazor/appsettings.Development.json
+++ b/CoolBlazor/CoolBlazor/appsettings.Development.json
@@ -7,9 +7,19 @@
     }
   },
   "CoolWebApi":{
-      "Name":"CoolWebApi",
-      "Url":"http://localhost:",
-      "Port":"5232"
+    "Name":"CoolWebApi",
+    "Url":"http://localhost:",
+    "Port":"5232"
+  },
+  "AWS":{
+    "S3": {
+      "Prefix": {
+        "Avatar":"/avatar/"
+      },
+      "BucketName": {
+        "CoolBlazor": "coolblazorbucket"
+      }
+    }
   },
   "https_port": 5195
 }
